<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/phone"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_city"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#37C1F8"
                android:entries="@array/cityslist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:textAlignment="center" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <CheckBox
                android:id="@+id/humidityCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/humidity"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_temperature"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp"/>

            <CheckBox
                android:id="@+id/cloudCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cloud"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_temperature"
                android:textColor="@color/white"/>

        </LinearLayout>
        
        <Button
            android:id="@+id/bottomShow"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/show_weather"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundedbutton"
            android:textSize="22sp"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>